--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,7 @@ edition = "2021"
 [dependencies]
 actix = "0.12"
 actix-web = "4.0.0-beta.11"
-actix-codec = "0.4"
-tokio-util = { version = "0.6", features=["io"] }
+tokio-util = { version = "0.6", features=["codec"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 shlex = "1.1"
