--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,18 +2,19 @@
 name = "blahaj"
 version = "0.1.0"
 edition = "2021"
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 actix = "0.12"
 actix-web = "4.0.0-beta.11"
-tokio-util = { version = "0.6", features=["codec"] }
+futures = "0.3"
+nix = "0.23"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 shlex = "1.1"
+signal-hook-tokio = "0.3"
 thiserror = "1.0"
 tokio = { version = "1", features = ["process", "macros"] }
+tokio-util = { version = "0.6", features = ["codec"] }
 tracing = "0.1"
-nix = "0.23"
-futures = "0.3"
+tracing-subscriber = "0.3"
