--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ nix = "0.23"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 shlex = "1.1"
-signal-hook-tokio = "0.3"
+signal-hook = "0.3"
+signal-hook-tokio = { version = "0.3", features=["futures-v0_3"] }
 thiserror = "1.0"
 tokio = { version = "1", features = ["process", "macros"] }
 tokio-util = { version = "0.6", features = ["codec"] }
