--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,5 @@ signal-hook-tokio = { version = "0.3", features=["futures-v0_3"] }
 thiserror = "1.0"
 tokio = { version = "1", features = ["process", "macros"] }
 tokio-util = { version = "0.6", features = ["codec"] }
-tracing = "0.1"
-tracing-subscriber = "0.3"
+log = "0.4"
+pretty_env_logger = "0.4"
