--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
 thiserror = "1.0"
 tokio = { version = "1", features = ["process", "macros"] }
 tokio-util = { version = "0.6", features = ["codec"] }
+humantime-serde = "1.0"
