fix(health): no killing child when health config is not present

--- a/config.yaml
+++ b/config.yaml
@@ -8,8 +8,8 @@ programs:
       strip-path: true
       health-check:
         path: /non-exist
-  # sleep:
-  #   command: sleep 5
+  sleep:
+    command: sleep 5
   # something:
   #   command: bash -c ./tests/scripts/print_something.sh
   # somethingelse:
