--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 actix = "0.12"
+actix-signal = { version = "0.1", features = ["derive"] }
 actix-web = "4.0.0-beta.14"
 awc = "3.0.0-beta.13"
 futures = "0.3"
@@ -14,6 +15,7 @@ nix = "0.23"
 pretty_env_logger = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
+serde_json = "1.0"
 shlex = "1.1"
 signal-hook = "0.3"
 signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
