--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,10 @@ log = "0.4"
 nix = "0.23"
 pretty_env_logger = "0.4"
 serde = { version = "1.0", features = ["derive"] }
+serde-with-expand-env = "1.1"
 serde_json = "1.0"
 serde_yaml = "0.8"
+shellexpand = "2.1"
 shlex = "1.1"
 signal-hook = "0.3"
 signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
