--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,6 @@ signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
 thiserror = "1.0"
 tokio = { version = "1", features = ["process", "macros"] }
 tokio-util = { version = "0.6", features = ["codec"] }
+
+[dev-dependencies]
+maplit = "1.0"
