--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ actix = "0.12"
 actix-signal = { version = "0.1", features = ["derive"] }
 actix-web = "4.0.0-beta.14"
 ansi_term = "0.12"
-awc = "3.0.0-beta.13"
+awc = { version = "3.0.0-beta.13", features = ["rustls"] }
 clap = { version = "3.0.0-rc.5", features = ["derive"] }
 color-eyre = "0.5"
 eyre = "0.6"
