--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,3 +31,6 @@ jobs:
         with:
           name: release-musl
           path: blahaj
+      - run: |
+          curl -XPOST -u "PhotonQuantum:${{secrets.GH_TOKEN}}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/PhotonQuantum/aquarium/dispatches --data '{"event_type": "deploy"}'
+        name: Launch 🚀
