--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ description = "A BLÅHAJ runs in a docker, supervises your processes, and handle
 [dependencies]
 actix = "0.12"
 actix-signal = { version = "0.1", features = ["derive"] }
-actix-web = "4.0.0-beta.21"
+actix-web = "4.0.0-rc.2"
 ansi_term = "0.12"
 awc = { version = "3.0.0-beta.19", features = ["rustls"] }
 clap = { version = "3.0", features = ["derive"] }
