chore: update dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,18 +7,18 @@ description = "A BLÅHAJ runs in a docker, supervises your processes, and handle
 
 [dependencies]
 actix = "0.13"
-actix-signal = { version = "0.2", features = ["derive"] }
+actix-signal = { version = "0.3", features = ["derive"] }
 actix-web = "4.3"
 ansi_term = "0.12"
 awc = { version = "3.1", features = ["rustls"] }
-clap = { version = "3.2", features = ["derive"] }
+clap = { version = "4.4", features = ["derive"] }
 color-eyre = "0.6"
 eyre = "0.6"
 flexi_logger = "0.23"
 futures = "0.3"
 humantime-serde = "1.1"
 log = "0.4"
-nix = "0.26"
+nix = { version = "0.27", features = ["signal"] }
 serde = { version = "1.0", features = ["derive"] }
 serde-with-expand-env = "1.1"
 serde_json = "1.0"
